--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+askama = "0.14.0"
+axum = "0.8.3"
+hyper = { version = "0.14", features = ["server"] }
+tokio = { version = "1.44.2", features = ["full"] }
