--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,15 @@ edition = "2024"
 [dependencies]
 askama = "0.14.0"
 axum = "0.8.3"
+clap = "4.5.39"
+fastrand = "2.3.0"
+log = "0.4.27"
+mime = "0.3.17"
+serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.44.2", features = ["full"] }
+utoipa = "5.3.1"
+sqlx = {version = "0.8.5", features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "json", "chrono"]}
+serde_json = "1.0.140"
+utoipa = "4"
+utoipa-swagger-ui = "5"
+
