--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,49 @@ edition = "2021"
 [dependencies]
 askama = "0.12.1"
 axum = { version = "0.8.4", features = ["macros", "tokio", "json"] }
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
 clap = {version = "4.5.38", features = ["derive", "env"]}
+
 fastrand = "2.3.0"
 log = "0.4.27"
 mime = "0.3.17"
+
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.45.0", features = ["full"] }
+
 sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "json", "chrono"]}
+
 serde_json = "1.0.140"
+
 utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "cecda0531bf7d90800af66b186055932ee730526", features = ["axum_extras"] }
+
 utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa.git", rev = "cecda0531bf7d90800af66b186055932ee730526", features = ["axum"] }
 thiserror = "2.0.12"
+tracing = "0.1.41"
+chrono = "0.4.41"
+
+[dependencies.tower-http]
+version = "0.6.4"
+features = ["fs", "trace", "cors"]
+
+
+[dependencies.tracing-subscriber]
+version = "0.3.19"
+features = ["env-filter"]
+
+[dependencies.utoipa-rapidoc]
+#version = "6.0.0"
+git = "https://github.com/juhaku/utoipa.git"
+rev = "cecda0531bf7d90800af66b186055932ee730526"
+features = ["axum"]
+
+[dependencies.utoipa-redoc]
+#version = "6.0.0"
+git = "https://github.com/juhaku/utoipa.git"
+rev = "cecda0531bf7d90800af66b186055932ee730526"
+features = ["axum"]
+
+[dependencies.utoipa-axum]
+git = "https://github.com/juhaku/utoipa.git"
+rev = "cecda0531bf7d90800af66b186055932ee730526"
 
